# timeline

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  package.nix  timeline.cabal  timeline.nix
.github/workflows/: haskell-ci.yml
src/Data/: Timeline.hs
src/Data/Timeline/: Hedgehog.hs
test/Data/: TimelineTest.hs
test/golden/: all_non-overlapping_situations_together.txt  one_change,_with_effective_to.txt  one_change.txt  overlaps.txt  two_groups_of_overlap.txt
timeline/: default.nix  timeline.cabal
timeline-core/: default.nix  timeline-core.cabal
timeline-core/src/Data/Timeline/: Internal.hs
timeline-hedgehog/: default.nix  timeline-hedgehog.cabal
timeline-hedgehog/src/Data/Timeline/: Hedgehog.hs
timeline-tests/: LICENSE  README.md  default.nix  timeline-tests.cabal
timeline-tests/test/Data/: TimelineTest.hs
timeline-tests/test/Spec/Data/: Timeline.hs
timeline-tests/test/golden/: all_non-overlapping_situations_together.txt  one_change,_with_effective_to.txt  one_change.txt  overlaps.txt  two_groups_of_overlap.txt
timeline/src/Data/: Timeline.hs
timeline/src/Data/Timeline/: Internal.hs
