cabal-version:      2.2
name:               timeline
version:            0.1.0.0
synopsis:           A simple library for handling data that changes over time
license:            Apache-2.0
license-file:       LICENSE
author:             Bellroy Tech Team <haskell@bellroy.com>
maintainer:         Bellroy Tech Team <haskell@bellroy.com>
category:           Development
build-type:         Simple
tested-with:        GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.1
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/bellroy/timeline.git

common deps
  build-depends: base >=4.13.0.0 && <4.18

library
  import:           deps
  exposed-modules:  Data.Timeline
  hs-source-dirs:   src/
  default-language: Haskell2010
  ghc-options:      -fwarn-unused-imports -Wall -fno-warn-unused-do-bind

  if flag(developer)
    ghc-options: -Werror

flag developer
  manual:      True
  default:     False
  description: compile with -Werror to make warnings fatal
